pids/bot3.log
Traceback (most recent call last):
  File "/storage/emulated/0/Download/instagram_bot/bot3_run.py", line 1, in <module>
    from bot_engine import InstagramBot
  File "/storage/emulated/0/Download/instagram_bot/bot_engine.py", line 307
    cookie_js = "var buttons = document.querySelectorAll('button, div[role=\'button\']');for (var i=0; i<buttons.length; i++) {var text = (buttons[i].innerText || "").toLowerCase();if (text.includes("allow") || text.includes("accept") || text.includes("tum cerezleri") || text.includes("kabul et") || text.includes("agree") || text.includes("onayla")) {buttons[i].click(); return "dismissed-cookie";}} return "no-cookie";"
                                                                                                                                                                                                        ^^^^^
SyntaxError: invalid syntax
